Add event tracking endpoint

--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -20,5 +20,6 @@
       development: false
     });
     tracker.trackPageview('pageview');
+    tracker.trackEvent('event_click', { 'summary' : 'this is simmary' });
   </script>
 </html>
