--- a/js/test/fixtures/index.html
+++ b/js/test/fixtures/index.html
@@ -8,11 +8,12 @@
 <body>
 
 <ol>
-  <li><a id='request' href="/fixtures/request">request</a></li>
-  <li><a id='jsonp' href="/fixtures/jsonp">jsonp</a></li>
+  <li><a id='amd' href="/fixtures/amd">amd</a></li>
   <li><a id='event' href="/fixtures/event">event</a></li>
-  <li><a id='pageview' href="/fixtures/pageview">pageview</a></li>
+  <li><a id='jsonp' href="/fixtures/jsonp">jsonp</a></li>
   <li><a id='loader' href="/fixtures/loader">loader</a></li>
+  <li><a id='pageview' href="/fixtures/pageview">pageview</a></li>
+  <li><a id='request' href="/fixtures/request">request</a></li>
   <li><a id='slow' href="/fixtures/slow">slow</a></li>
 </ol>
 
